app/assets/stylesheets/bootstrap_overrides.scss
// Raleway font
@import url(//fonts.googleapis.com/css?family=Raleway:400,300,700);

$black: rgba(0,0,0,.87);
$blue: #3A8CC2;
$orange: #FAB647;


body, html {
	font-family: "proxima-nova";
	color: $black;
	background: #f5f5f5;
  font-size: 18px;
}

body {
	padding-top: 70px;
}

.navbar-inverse {
  background: $blue;
  border-bottom: transparent;
}

.navbar-brand {
	padding: 10px 10px;
}

.navbar-inverse .navbar-nav > li > a {
	color: white;
}

a.dropdown-toggle {
	padding-bottom: 11px !important;
}

.btn-register {
	background: $orange;
	&:hover {
		background: rgba($orange,0.8);
	}
}

.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
	color: white;
}

.navbar-inverse .navbar-toggle {
	border-color: white;
}

.navbar-inverse .navbar-text {
	color: white;
	font-weight: bold;
}

.panel-body {
	padding: 0;

	ul li {
		padding: 10px 15px !important;
	}
}

